--- a/public/site.css
+++ b/public/site.css
@@ -1,5 +1,5 @@
 /* Loader */
-#load-screen {
+/* #load-screen {
     background: #333136 !important;
     position: fixed;
     top: 0;
@@ -28,7 +28,7 @@
     color: white;
     width: 10px;
     height: 20px;
-    /* background: #3EA3DB ; */
+     background: #3EA3DB ; 
     background: transparent ;
 
     position: absolute;
@@ -89,7 +89,7 @@
         left: 100px;
         top: 0;
     }
-}
+} */
 
 /* End Loader */
 
