--- a/public/login.css
+++ b/public/login.css
@@ -151,3 +151,109 @@ a {
     cursor: pointer;
     transition: all 200ms linear;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300);
+
+.frame {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    background: rgba(63, 63, 63, 0.80);
+    color: #415868;
+    /* font-family: 'Open Sans', Helvetica, sans-serif; */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.modal {
+    position: absolute;
+    top: calc(50% - 180px);
+    left: calc(50% - 190px);
+    width: 380px;
+    height: 360px;
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 4px 8px 12px 0 rgba(0, 0, 0, 0.4);
+    text-align: center;
+    overflow: hidden;
+    animation: show-modal 0.7s ease-in-out;
+}
+
+.modal.hide {
+    animation: hide-modal 0.6s ease-in-out both;
+}
+
+.modal img {
+    margin-top: 24px;
+}
+
+.modal .title {
+    display: block;
+    font-size: 28px;
+    line-height: 34px;
+    font-weight: 400;
+    margin: 14px 0 5px 0;
+}
+
+.modal p {
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 19px;
+    margin: 0;
+    padding: 0 30px;
+}
+
+.modal .button {
+    position: absolute;
+    height: 50px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #f65656;
+    color: #fff;
+    line-height: 50px;
+    font-size: 24px;
+    font-weight: 400;
+    cursor: pointer;
+    transition: background 0.3s ease-in-out;
+}
+
+.modal .button:hover {
+    background: #ec3434;
+}
+
+@keyframes show-modal {
+    0% {
+        transform: scale(0);
+    }
+
+    60% {
+        transform: scale(1.1);
+    }
+
+    80% {
+        transform: scale(0.95);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes hide-modal {
+    0% {
+        transform: scale(1);
+    }
+
+    20% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
